namespace Logic
{
    public interface IData<T>{
        T Sptrite {get;}
        string Name {get;}
        int HP{get;}
        int Armor{get;}
        int Speed{get;}
    }
}