namespace Logic
{
    public interface IPickable<T>{
        IData<T> GetData();
    }
}